--- a/public/assets/css/argon-dashboard.css
+++ b/public/assets/css/argon-dashboard.css
@@ -26934,3 +26934,11 @@ pre[class*="language-"] {
 }
 
 /*# sourceMappingURL=dashboard-free.css.map */
+
+
+/* Custom css */
+@media print {
+    .print-hide{
+      display: none;
+    }
+  }
